# S.T.A.R.-Program

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Contributing.md  DockerFile  Dockerfile  LICENSE  README.md  compute_3selmer_from_raw.py  cremona.tar  cremona_raw_parsed.csv  ec_curvedata.py  environment.yml  parse_cremona_chunks.py  parse_lmfdb_raw.py  pyproject.toml  requirements.txt  sample_cremona_parsed.xlsx  setup.py
acsc/: __init__.py  compute_3selmer_from_raw_cremona.py  null_models.py  projection.py  quantile.py  statistics.py  tda_pipeline.py  utils.py
archive/: convert_pantheon_dat_to_csv.py
ci_diagnostics/: diagnose_cosmology.py
configs/: planck2015.yaml
data/: acsc_projected_cremona_final.cleaned.csv  acsc_projected_cremona_final.csv  acsc_projected_cremona_final.csv.manifest.json  acsc_projected_cremona_with_alt.csv  aggregate_manifest.json
docker/: Dockerfile
docs/: STAR_Model.md
examples/: 00_visualizations.ipynb  010_visualizations.ipynb  01_projection_demo.ipynb  02_entropy_field_demo.ipynb  03_entropy_geodesics.ipynb  04_metric_perturbations.ipynb  05_hubble_tension_fit.ipynb  06_symbolic_regression_law_discovery.ipynb  07_tda_stability_analysis.ipynb  cosmology_comparison.ipynb  full_cosmology_inference.ipynb  planck_comparison.ipynb  sky_projection_pipeline.ipynb  symbolic_regression_Hz.ipynb
notebooks/: 01_preprocessing.ipynb  ACSC_Verification.ipynb  cosmology_comparison.ipynb  planck_comparison.ipynb  sky_projection_pipeline.ipynb  symbolic_regression_Hz.ipynb
scripts/: build_cosmology_data.py  compute_3selmer_from_raw.py  diff_outputs.py  ec_curvedata.py  generate_pantheon_module_from_csv.py  parse_cremona_chunks.py  regenerate_pantheon_module.py
src/: 01_projection_demo.ipynb  __init__.py  latex_constraints.py
tests/: __init__.py  alt_mappings.py  compute_3selmer_from_raw.py  null_models.py  projection.py  quantile.py  setup.py  statistics.py  tda_pipeline.py  (+23 more)
(+100 files in other folders)
